# faiss

./: .gitignore  CMakeLists.txt
c_api/: IndexIVFPQ.cpp  utils.cpp
gpu/: GpuAutoTune.cpp  GpuAutoTune.h  GpuFaissAssert.h  GpuIndex.cu  GpuIndex.h  GpuIndexFlat.cu  GpuIndexIVF.cu  GpuIndexIVF.h  GpuIndexIVFFlat.cu  GpuIndexIVFPQ.cu  IndexProxy.cpp  IndexProxy.h  StandardGpuResources.cpp
gpu/impl/: BroadcastSum.cu  Distance.cu  InvertedListAppend.cu  L2Norm.cu  L2Select.cu  RemapIndices.cpp  VectorResidual.cu
gpu/test/: CMakeLists.txt  TestGpuIndexFlat.cpp1  TestGpuIndexIVFPQ.cpp1  TestUtils.h  demo_ivfpq_indexing_gpu.cpp  gpuflat.cpp  gpuivfflat.cpp  gpuivfpq.cpp
gpu/utils/: DeviceMemory.cpp  DeviceUtils.cpp  DeviceUtils.h  DeviceVector.cuh  MemorySpace.h  MergeNetworkBlock.cuh  NoTypeTensor.cuh  StackDeviceMemory.cpp  Timer.cpp  Transpose.cuh  WorkerThread.cpp
tests/: test_binary_flat.cpp  test_ivfpq_codec.cpp  test_ivfpq_indexing.cpp
tutorial/cpp/: 1-Flat.cpp  2-IVFFlat.cpp  3-IVFPQ.cpp  CMakeLists.txt  faiss_flat.cpp  faiss_test.cpp  flat.cpp  ivfpq_multi.cpp  ivfpq_single.cpp
